--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "next": "12.0.10",
     "puppeteer": "^13.1.3",
-    "react": "17.0.2",
+    "react": "^17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
