--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "googleapis": "^95.0.0",
     "next": "12.0.10",
     "puppeteer": "^13.1.3",
