--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "axios": "^0.26.0",
+    "dotenv": "^16.0.0",
+    "form-data": "^4.0.0",
+    "fs": "^0.0.1-security",
     "googleapis": "^95.0.0",
     "next": "12.0.10",
+    "node": "^17.5.0",
     "puppeteer": "^13.1.3",
     "react": "^17.0.2",
     "react-dom": "17.0.2"
