--- a/.gitignore
+++ b/.gitignore
@@ -28,7 +28,7 @@ yarn-error.log*
 
 # local env files
 .env
-.env.local
+# .env.local
 .env.development.local
 .env.test.local
 .env.production.local
@@ -40,4 +40,4 @@ yarn-error.log*
 *.tsbuildinfo
 
 test.csv
-secrets.json
+# secrets.json
