--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "yarn build && NODE_ENV=production node --max-old-space-size=1024 server.js", 
+    "start": "next start -p $PORT", 
     "lint": "next lint"
   },
   "dependencies": {
