--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
   "name": "scrapper-ui",
   "private": true,
+  "version": "0.0.1",
+  "engines": {
+    "npm" : "6.x",
+    "node": "16.x"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
